# spatial-optician

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  run.ps1  seed_db.py
frontend/: index.html  metadata.json  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
mcp-mongo/: Dockerfile  README.md  package-lock.json  package.json
mcp-mongo/src/: index.ts
