[project]
name = "backend"
version = "0.1.0"
description = "Spatial Optician Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "google-adk",
]
